datasets/dataset_txt/pipenv/pipenv_1484.txt
rschuetzler commented on 6 Mar 2018
Syntax error when trying to install a new package to a pipenv
Describe your environment
OS Type: Ubuntu Desktop
Python version: Python 3.6.3
Pipenv version: 11.0.2
Expected result
Run pipenv install django~=1.11 to install Django.
Actual result
Adding django~=1.11 to Pipfile's [packages]…
Pipfile.lock not found, creating…
Locking [dev-packages] dependencies…
ome/ryan/anaconda3/lib/python3.6/site-packages/pipenv/patched/pip/index.py", line 31, in <module>
    from pip.wheel import Wheel, wheel_ext
  File "/home/ryan/anaconda3/lib/python3.6/site-packages/pipenv/patched/pip/wheel.py", line 6, in <module>
    import compileall
  File "/home/ryan/anaconda3/lib/python3.6/compileall.py", line 20, in <module>
    from concurrent.futures import ProcessPoolExecutor
  File "/home/ryan/anaconda3/lib/python3.6/site-packages/pipenv/../concurrent/futures/__init__.py", line 8, in <module>
    from concurrent.futures._base import (FIRST_COMPLETED,
  File "/home/ryan/anaconda3/lib/python3.6/site-packages/pipenv/../concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax
Steps to replicate
Create a new pipenv and run pipenv install django~=1.11 to install Django.